--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Cool Blog</title>
+  <script src="data.js"></script>
   <script src="my_blog.js"></script>
-
 </head>
 <body onload="populateTagCheckboxes()">
   <div>
@@ -13,14 +13,25 @@
   <form onsubmit="return false">
     
     <div>
+      <h2>Author:</h2>
+      <input type="text" name="author" id="inputAuthor" placeholder="What's you name?">
+    </div>
+
+    <div>
       <h2>Title:</h2>
-      <h3>(Please use only letters. Text must be under 50 characters)</h3>
-      <input type="text" name="title" id="inputTitle" placeholder="Write your title here">
+      <h3>(Please use only letters. Text must be up to 50 characters)</h3>
+      <input type="text" name="title" id="inputTitle" placeholder="What do you want to talk about?" size="35">
     </div>
 
     <div>
       <h2>Content:</h2>
-      <textarea rows="4" cols="50" id="inputContent" placeholder="Write something"></textarea>
+      <textarea rows="4" cols="50" id="inputContent" placeholder="What's on your mind?"></textarea>
+    </div>
+
+    <div>
+      <h3>What's your mood?</h3>
+      <input type="range" name="mood" min="1" max="5" value="3" onchange="showSmiley(this.value)" />
+      <span id="range">3</span>
     </div>
 
     <div>
@@ -31,11 +42,12 @@
 
     <div>
       <br>
-      <input type="submit" onClick="JavaScript:submitNewPost()" value="Submit">
+      <input type="submit" onClick="JavaScript:submitNewPost()" value="Submit New Post">
     </div>
   </form>
 
   <div>
+    <div id="author"></div>
     <div id="title"></div>
     <div id="content"></div>
     <ul id="tags"></ul>
