--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Cool Blog</title>
   <script src="data.js"></script>
   <script src="my_blog.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body onload="populateTagCheckboxes()">
   <div>
@@ -30,8 +31,12 @@
 
     <div>
       <h3>What's your mood?</h3>
-      <input type="range" name="mood" min="1" max="5" value="3" onchange="showSmiley(this.value)" />
-      <span id="range">3</span>
+      <input type="range" min="1" max="5" value="3" onchange="showSmiley(this.value)" />
+      <span><a id="mood" class="smiley1" href="emoticons.png"></a></span>
+      <span><a id="mood" class="smiley2" href="emoticons.png"></a></span>
+      <span><a id="mood" class="smiley3" href="emoticons.png"></a></span>
+      <span><a id="mood" class="smiley4" href="emoticons.png"></a></span>
+      <span><a id="mood" class="smiley5" href="emoticons.png"></a></span>
     </div>
 
     <div>
