Chosen smiley now appears after submition

--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
     </form>
   </div>
   
-  <div id="viewPosts">
+  <div class="hide" id="viewPosts">
     <p>Just cheking</p>
     <div id="author"></div>
     <div id="title"></div>
     <div id="content"></div>
     <ul id="tags"></ul>
+    <span><a id="selectedMood" class="" href="emoticons.png"></a></span>
   </div>
 
 </body>
