--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
         <span>Author: </span>
         <select id="inputAuthor" onchange="authorDetails(this.value)">
           <option value="default" disabled selected>--What's your name?--</option>
-          <option value="Tali">Tali</option>
-          <option value="Yoni">Yoni</option>
+          <option value="Athos">Athos</option>
+          <option value="Porthos">Porthos</option>
+          <option value="Aramis">Aramis</option>
         </select>
         <div id="age"></div>
-        <div id="badassness"></div>
-        <div id="Line placeholder"></div>
+        <div id="swordsmanship"></div>
+        <div id="charisma"></div>
       </label>
 
       <label>
